objects/KPI_Management__c/KPI_Management__c.object-meta.xml
<CustomObject>
    <label>KPI Management</label>
    <nameField>
        <displayFormat>KM-{000000}</displayFormat>
        <label>KPI Management ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>