objects/KPI_Management__c/fields/ActualKPIProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualKPIProfitAmount__c</fullName>
    <label>Actual KPI Profit Amount</label>
    <summarizedField>Month_KPI__c.Month_KPI_Profit_Amount__c</summarizedField>
    <summaryForeignKey>Month_KPI__c.KPIManagementID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>