objects/KPI_Management__c/fields/KPI_Completed_Rate__c.field-meta.xml
<CustomField>
    <fullName>KPI_Completed_Rate__c</fullName>
    <formula>(KPI_Profit_Achieved_Amount__c /   ActualKPIProfitAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Completed Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Percent</type>
</CustomField>