objects/KPI_Management__c/fields/KPI_End_Date__c.field-meta.xml
<CustomField>
    <fullName>KPI_End_Date__c</fullName>
    <label>KPI End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>