objects/KPI_Management__c/fields/KPI_Profit_Achieved_Amount__c.field-meta.xml
<CustomField>
    <fullName>KPI_Profit_Achieved_Amount__c</fullName>
    <label>KPI Profit Achieved Amount</label>
    <summarizedField>Month_KPI__c.Month_KPI_Profit_Achieved_Amount__c</summarizedField>
    <summaryForeignKey>Month_KPI__c.KPIManagementID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>