objects/KPI_Management__c/fields/KPI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>KPI_Start_Date__c</fullName>
    <label>KPI Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>