objects/KPI_Management__c/fields/KPIAllocatedtoMonthKPI__c.field-meta.xml
<CustomField>
    <fullName>KPIAllocatedtoMonthKPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KPI Allocated to Month KPI</label>
    <type>Checkbox</type>
</CustomField>