objects/KPI_Management__c/fields/KPIAllocatedtoSales__c.field-meta.xml
<CustomField>
    <fullName>KPIAllocatedtoSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KPI Allocated to Sales</label>
    <type>Checkbox</type>
</CustomField>