objects/KPI_Management__c/fields/KPIManagementName__c.field-meta.xml
<CustomField>
    <fullName>KPIManagementName__c</fullName>
    <label>KPI Management Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>