objects/KPI_Management__c/fields/KPIProfitAmountInput__c.field-meta.xml
<CustomField>
    <fullName>KPIProfitAmountInput__c</fullName>
    <label>KPI Profit Amount Input</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>