objects/KPI_Management__c/validationRules/KPIdaterule.validationRule-meta.xml
<ValidationRule>
    <fullName>KPIdaterule</fullName>
    <active>true</active>
    <errorConditionFormula>MONTH( KPI_End_Date__c ) - MONTH( KPI_Start_Date__c ) = 12</errorConditionFormula>
    <errorMessage>This is KPI for a year. Please change your KPI Start Date &amp; KPI End Date</errorMessage>
</ValidationRule>