objects/KPI_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KPIManagementName__c</columns>
    <columns>KPIProfitAmountInput__c</columns>
    <columns>ActualKPIProfitAmount__c</columns>
    <columns>KPI_Profit_Achieved_Amount__c</columns>
    <columns>KPI_Completed_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>